Clean up setup IntelliJ build dir

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ def checkstyleVersion = "6.19"
 def pmdVersion = "5.5.4"
 def findbugsVersion = "3.0.1"
 
+if (System.properties['intellij'] == 'true') {
+    buildDir = new File(projectDir, 'buildIdea')
+}
+
 buildscript {
     repositories {
         mavenCentral()
@@ -875,6 +879,3 @@ task setIntelliJAppEngineFacetSettings {
     def moduleMainFacetComponent = moduleMainXml.'*'.find {it.@name == 'FacetManager'}
 }
 
-task setIntelliJBuildPath {
-    //buildDir = new File(rootProject.projectDir, 'buildIdea')
-}
