--- a/build.gradle
+++ b/build.gradle
@@ -816,13 +816,13 @@ task setupIntelliJGradleIntegrationSettings {
     dependsOn resetIntelliJRootModuleOutputPath, changeExplodedWarDirectoryToMatchAppEnginePlugin
 }
 
-def throwGradleExceptionUnexpectedSizeXml(task, currentNode, parentNode, size) {
-    throw new GradleException('[' + task +  '] ' + currentNode + ' size in ' + parentNode +
+void throwUnexpectedNodeListSizeException(String taskName, String currentNode, String parentNode, int size) {
+    throw new GradleException('[' + taskName +  '] ' + currentNode + ' size in ' + parentNode +
             ' node not expected to be' + size)
 }
 
-def findComponent(xml, componentName, parentTaskName) {
-    def componentNode = xml.component.find { it.@name == componentName }
+Node findComponent(Node xml, String componentName, String parentTaskName) {
+    Node componentNode = (Node)(xml.component.find { it.@name == componentName })
     if (componentNode == null) {
         throw new GradleException('[' + parentTaskName + ']' + componentName + ' node not found')
     }
@@ -830,8 +830,8 @@ def findComponent(xml, componentName, parentTaskName) {
     return componentNode
 }
 
-def getSystemNodeList(externalProjectsComponentNode, parentTaskName) {
-    def systemNodeList = externalProjectsComponentNode.system
+NodeList getSystemNodeList(Node externalProjectsComponentNode, String parentTaskName) {
+    NodeList systemNodeList = externalProjectsComponentNode.system
     if (systemNodeList.size() == 0) {
         throw new GradleException('[' + parentTaskName + '] Cannot find system node in ExternalProjectsManager')
     }
@@ -839,8 +839,8 @@ def getSystemNodeList(externalProjectsComponentNode, parentTaskName) {
     return systemNodeList
 }
 
-def findGradleSystemNode(systemNodeList, parentTaskName) {
-    def gradleSystemNode = systemNodeList.find { it.@id == 'GRADLE' }
+Node findGradleSystemNode(NodeList systemNodeList, String parentTaskName) {
+    Node gradleSystemNode = (Node)(systemNodeList.find { it.@id == 'GRADLE' })
     if (gradleSystemNode == null) {
         throw new GradleException('[' + parentTaskName + '] Cannot find GRADLE from system node(s)')
     }
@@ -848,67 +848,94 @@ def findGradleSystemNode(systemNodeList, parentTaskName) {
     return gradleSystemNode
 }
 
-def getStateNode(gradleSystemNode, parentTaskName) {
-    def stateNodeList = gradleSystemNode.state
+Node getStateNode(Node gradleSystemNode, String parentTaskName) {
+    NodeList stateNodeList = gradleSystemNode.state
     if (stateNodeList.size() != 1) {
-        throwGradleExceptionUnexpectedSizeXml(parentTaskName, 'state', 'system', stateNodeList.size())
+        throwUnexpectedNodeListSizeException(parentTaskName, 'state', 'system', stateNodeList.size())
     }
-    def stateNode = stateNodeList[0]
+    Node stateNode = (Node)(stateNodeList[0])
 
     return stateNode
 }
 
-task addIntelliJAfterSyncSettings {
+NodeList getTaskPathNodeList(Node stateNode, String parentTaskName) {
+    NodeList taskPathNodeList = stateNode.task
+
+    if (taskPathNodeList.size() > 1) {
+        throwUnexpectedNodeListSizeException(parentTaskName, 'task', 'state', taskPathNodeList.size())
+    }
+
+    return taskPathNodeList
+}
+
+Node getOrCreateTaskPathNode(NodeList taskPathNodeList, Node stateNode) {
+    if (taskPathNodeList.size() == 0) {
+        List stateNodeChildren = stateNode.children()
+        stateNodeChildren.add(0, new Node(null, 'task', [path: '$PROJECT_DIR$']))
+
+        NodeList newTaskPathNodeList = stateNode.task
+        Node taskPathNode = (Node)newTaskPathNodeList[0]
+
+        taskPathNode.appendNode('activation')
+
+        return taskPathNode
+    }
+
+    NodeList newTaskPathNodeList = taskPathNodeList
+    Node taskPathNode = (Node)newTaskPathNodeList[0]
+    return taskPathNode
+}
+
+Node getActivationNode(Node taskPathNode, String parentTaskName) {
+    NodeList activationNodeList = taskPathNode.activation
+    if (activationNodeList.size() != 1) {
+        throwUnexpectedNodeListSizeException(parentTaskName, 'activation', 'state', activationNodeList.size())
+    }
+
+    return (Node)(activationNodeList[0])
+}
+
+NodeList getAfterSyncNodeList(Node activationNode, String parentTaskName) {
+    NodeList afterSyncNodeList = activationNode.after_sync
+    if (afterSyncNodeList.size() > 1) {
+        throwUnexpectedNodeListSizeException(parentTaskName, 'after_sync', 'activation', afterSyncNodeList.size())
+    }
+
+    return afterSyncNodeList
+}
+
+task addIntelliJAfterSyncTask {
+    description 'Adds setupIntelliJGradleIntegrationSettings task to execute after sync'
     group intellijSetupGroup
     doLast {
-        def workspaceXmlFilePath = '.idea/workspace.xml'
-        def workspaceXml = new XmlParser().parse(workspaceXmlFilePath)
+        String workspaceXmlFilePath = '.idea/workspace.xml'
+        Node workspaceXml = new XmlParser().parse(workspaceXmlFilePath)
 
-        def externalProjectsComponentNode = findComponent(workspaceXml, 'ExternalProjectsManager', name)
-        def systemNodeList = getSystemNodeList(externalProjectsComponentNode, name)
-        def gradleSystemNode = findGradleSystemNode(systemNodeList, name)
-        def stateNode = getStateNode(gradleSystemNode, name)
+        // these nodes must exist otherwise there is something wrong
+        Node externalProjectsComponentNode = findComponent(workspaceXml, 'ExternalProjectsManager', name)
+        NodeList systemNodeList = getSystemNodeList(externalProjectsComponentNode, name)
+        Node gradleSystemNode = findGradleSystemNode(systemNodeList, name)
+        Node stateNode = getStateNode(gradleSystemNode, name)
 
-//    <task path="$PROJECT_DIR$">
-//    <activation>
-//    <after_sync>
-//    <task name="resetIntelliJRootModuleOutputPath" />
-//    </after_sync>
-//          </activation>
-//    </task>
-        def taskNodeList = stateNode.task
+        // if the user somehow messed with the gradle tool window, the task path node may exist
+        // otherwise we create it
+        NodeList taskPathNodeList = getTaskPathNodeList(stateNode, name)
+        Node taskPathNode = getOrCreateTaskPathNode(taskPathNodeList, stateNode)
 
-        if (taskNodeList.size() > 1) {
-            throwGradleExceptionUnexpectedSizeXml(name, 'task', 'state', taskNodeList.size())
-        }
+        Node activationNode = getActivationNode(taskPathNode, name)
 
-        if (taskNodeList.size() == 0) {
-            println 'Add task node'
+        NodeList afterSyncNodeList = getAfterSyncNodeList(activationNode, name)
 
+        // activation node may exist but there is no after_sync node, for example if they have a before_sync node
+        String afterSyncTask = 'setupIntelliJGradleIntegrationSettings'
+        if (afterSyncNodeList.size() == 0) {
+            activationNode.appendNode('after_sync')
+            activationNode.after_sync[0].appendNode('task', [name: afterSyncTask])
         } else {
-            def activationNodeList = taskNodeList[0].activation
-            if (activationNodeList.size() != 1) {
-                throwGradleExceptionUnexpectedSizeXml(name, 'activation', 'state', activationNodeList.size())
-            }
-            def activationNode = activationNodeList[0]
-
-            def afterSyncNodeList = activationNode.after_sync
-            if (afterSyncNodeList.size() > 1) {
-                throwGradleExceptionUnexpectedSizeXml(name, 'after_sync', 'activation', afterSyncNodeList.size())
-                // throwUnexpectedNodeListSizeException
-            }
-
-            if (afterSyncNodeList.size() == 0) {
-                println 'No after sync'
-                activationNode.appendNode('after_sync')
-                activationNode.after_sync[0].appendNode('task', [name: 'setupIntelliJGradleIntegrationSettings'])
-            } else {
-                def afterSyncNode = afterSyncNodeList[0]
-                def taskNode = afterSyncNode.task.find {it.@name == 'setupIntelliJGradleIntegrationSettings'}
-                if (taskNode == null) {
-                    println 'We did not find you'
-                    afterSyncNode.appendNode('task', [name: 'setupIntelliJGradleIntegrationSettings'])
-                }
+            def afterSyncNode = afterSyncNodeList[0]
+            def taskNode = afterSyncNode.task.find {it.@name == afterSyncTask}
+            if (taskNode == null) {
+                afterSyncNode.appendNode('task', [name: afterSyncTask])
             }
         }
 
@@ -919,8 +946,6 @@ task addIntelliJAfterSyncSettings {
             xmlNodePrinter.print(workspaceXml)
         }
     }
-
-    //println
 }
 
 task setIntelliJAppEngineFacetSettings {
