--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,8 @@ dependencies {
                     "com.sun.jersey:jersey-core:1.19.4",
                     "com.sun.jersey.contribs:jersey-multipart:1.19.4",
                     "org.apache.taglibs:taglibs-standard-impl:1.2.5",
-                    "org.jsoup:jsoup:1.11.2"
+                    "org.jsoup:jsoup:1.11.2",
+                    "org.imsglobal:basiclti-util:1.1.2"
 
     testAnnotationProcessor testng
 
