--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,8 @@ dependencies {
                     "com.sun.jersey.contribs:jersey-multipart:1.19.3",
                     "joda-time:joda-time:2.9.7",
                     "org.apache.taglibs:taglibs-standard-impl:1.2.5",
-                    "org.jsoup:jsoup:${jsoupVersion}"
+                    "org.jsoup:jsoup:${jsoupVersion}",
+                    "org.imsglobal:basiclti-util:1.1.2"
 
     exclude         "com.google.appengine:appengine-api-1.0-sdk:${appengineVersion}",
                     "com.google.appengine:appengine-endpoints-deps:${appengineVersion}",
