--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -296,4 +296,12 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         <servlet-name>CanvasLogout</servlet-name>
         <url-pattern>/canvas-logout</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>CanvasUpload</servlet-name>
+        <servlet-class>teammates.ui.controller.CanvasUploadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CanvasUpload</servlet-name>
+        <url-pattern>/canvas-upload</url-pattern>
+    </servlet-mapping>
 </web-app>
