Lti Instructor Page in progress

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -257,6 +257,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         <url-pattern>/lti</url-pattern>
     </servlet-mapping>
     <servlet>
+        <servlet-name>LtiCreateInstructorServlet</servlet-name>
+        <servlet-class>teammates.ui.controller.LtiCreateInstructorServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LtiCreateInstructorServlet</servlet-name>
+        <url-pattern>/ltiInstructorCreate</url-pattern>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>CanvasServlet</servlet-name>
         <servlet-class>teammates.ui.controller.CanvasServlet</servlet-class>
     </servlet>
