--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,10 @@ apply plugin: "pmd"
 apply plugin: "findbugs"
 apply plugin: "jacoco"
 
-def appengineVersion = "1.9.27"
+
+apply plugin: 'project-report'
+
+def appengineVersion = "1.9.53"
 def checkstyleVersion = "6.19"
 def pmdVersion = "5.5.4"
 def findbugsVersion = "3.0.1"
@@ -25,7 +28,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.google.appengine:gradle-appengine-plugin:1.9.27"
+        classpath "com.google.appengine:gradle-appengine-plugin:1.9.53"
     }
 }
 
@@ -41,6 +44,11 @@ configurations.all {
         force "com.google.appengine:appengine-api-1.0-sdk:${appengineVersion}"
     }
 }
+
+configurations {
+    testCompile.exclude module: 'jsoup'
+}
+
 
 repositories {
     mavenCentral()
@@ -79,6 +87,7 @@ dependencies {
                     "org.datanucleus:datanucleus-core:1.1.5",
                     "org.datanucleus:datanucleus-jpa:1.1.5",
                     "xerces:xercesImpl:2.11.0"
+                    //"org.jsoup:jsoup:1.10.2"
 
     runtime         configurations.exclude
 
@@ -98,10 +107,33 @@ dependencies {
                     "org.testng:testng:6.9.4",
                     "org.kohsuke:wordnet-random-name:1.3"
 
-    testExclude     "com.google.appengine:appengine-tools-sdk:${appengineVersion}"
+    testExclude     "com.google.appengine:appengine-tools-sdk:${appengineVersion}",
+                    "org.jsoup:jsoup:1.10.2"
 
-    testRuntime     configurations.testExclude
+    //test.exclude    "org.jsoup:jsoup:1.10.2"
 
+    testRuntime     "com.google.appengine:appengine-tools-sdk:${appengineVersion}"
+
+}
+
+configurations {
+    testCompile.exclude module: 'jsoup'
+}
+
+configurations.testCompile.dependencies.each {
+    compileDependency ->
+        println "Compile dependency: ${compileDependency.getName()}"
+        //configurations.androidTestCompile.dependencies.each { androidTestCompileDependency ->
+        //    configurations.androidTestCompile.exclude module: "${compileDependency.getName()}"
+        //}
+}
+
+configurations.testRuntime.dependencies.each {
+    compileDependency ->
+        println "Runtime dependency: ${compileDependency.getName()}"
+        //configurations.androidTestCompile.dependencies.each { androidTestCompileDependency ->
+        //    configurations.androidTestCompile.exclude module: "${compileDependency.getName()}"
+        //}
 }
 
 sourceSets {
