--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -80,6 +80,10 @@
         <servlet-name>ControllerServlet</servlet-name>
         <url-pattern>/page/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControllerServlet</servlet-name>
+        <url-pattern>/lti/*</url-pattern>
+    </servlet-mapping>
 
     <servlet>
         <description>Servlet that handles all automated requests, e.g cron jobs and task queues</description>
